# Finance

./: .cursorrules  .dockerignore  .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CURRENT.md  Dockerfile  README.md  README.template.md  develop  develop.conf.example  docker-compose.prod.yml  docker-compose.yml  init-skeleton  mkdocs.yml  push-skeleton  pyproject.toml  requirements.txt  run.py  sync-skeleton
.claude/commands/: add-todo.md  commit-with-metrics.md  develop-frontier.md  feature-request-continue.md  feature-request.md  finish-feature.md  finish-frontier.md  identify-frontier.md  sync-skeleton.md
.claude/rules/: development-standards.md  docs-authority-and-escalation.md
.cursor/rules/: code-style.mdc  cursor-claude-doc-sync.mdc  doc-standards.mdc  docker-runtime-policy.mdc  docs-authority-and-escalation.mdc  main.mdc  skeleton-repo-maintenance.mdc  stack-conventions.mdc
.githooks/: README.md  pre-commit
data/: seed-merchant-displays.json
data/seed-statements/: ian.toml  ian.yaml  (+2 more)
docs/: GETTING_STARTED.md  PORTS.md  ai-context.md  index.md  skeleton-MAINTAINERS.md  title-page.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: README.md  bbd_projection.py  dev.sh  init-skeleton.sh  serve-docs.sh  sync-skeleton.sh
tasks/: lessons.md  ticket-progress.md  todo.md
tests/: test_api_bbd_projection.py  test_finance_bbd_engine.py  test_goals_actuals_engine.py  test_goals_budgets_contracts.py  test_income_liability_contracts.py  test_unified_monthly_summary.py
(+142 files in other folders)
